kubernetes/pagopa/egress-tls-origination/egress-gad-test-gateway.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http-port-for-tls-origination
      protocol: HTTP
    hosts:
    - gad.test.pagopa.gov.it

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-gad-test-pagopa-gov-it
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: gad-test-pagopa-gov-it
