kubernetes/pagopa/egress-tls-origination/egress-gad-test-service-entry.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: gad-test-pagopa-gov-it
spec:
  hosts:
  - gad.test.pagopa.gov.it
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
