kubernetes/pagopa/egress-tls-origination/egress-gad-test-virtual-service.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-gad-test-pagopa-gov-it-through-egress-gateway
spec:
  hosts:
  - gad.test.pagopa.gov.it
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: gad-test-pagopa-gov-it
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: gad.test.pagopa.gov.it
        port:
          number: 443
      weight: 100

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-gad-test-pagopa-gov-it
spec:
  host: gad.test.pagopa.gov.it
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
